<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:ignore="ExtraText"
    android:scrollbarThumbVertical="@android:color/transparent"
    android:padding="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/main_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10sp"
            android:gravity="center">
            <ImageView
                android:id="@+id/photo_user"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/photo_user"/>
        </LinearLayout>

        /////////BLOCK NAME


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:id="@+id/name"
            android:layout_below="@+id/main_lay">
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/Name"/>

            <EditText
                android:id="@+id/edit_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/Name"
                android:inputType="textCapWords"
                android:autofillHints="" />
        </LinearLayout>

        /////////BLOCK LAST NAME

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/last_name"
            android:layout_below="@+id/name">
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/last_name"/>

            <EditText
                android:id="@+id/edit_last_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/last_name"
                android:inputType="textCapWords"
                android:autofillHints=""/>
        </LinearLayout>


        /////////BLOCK EMAIL

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/email"
            android:layout_below="@+id/last_name">
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/Email"/>

            <EditText
                android:id="@+id/edit_email"
                style="@style/EditorFieldStyle"
                android:hint="@string/Email"
                android:autofillHints=""/>
        </LinearLayout>


        /////////BLOCK TELEPHONE






        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:layout_below="@+id/email">
            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/email">
            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:id="@+id/save"
                android:text="@string/SAVE"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"/>
        </LinearLayout>



    </RelativeLayout>
</ScrollView>